fix chevron wrapping on small screens

--- a/src/components/cookies-banner/_cookies-banner.scss
+++ b/src/components/cookies-banner/_cookies-banner.scss
@@ -8,3 +8,14 @@
   color: $cookie-banner-text;
   word-break: break-word;
 }
+
+.btn--secondary {
+  margin-left: 0.5rem;
+}
+
+.btn--cookies {
+  @media (max-width: 410px) {
+    width: 100vh;
+    margin-left: 0;
+  }
+}
